[package]
name = "ringct"
version = "0.2.0"
edition = "2021"
description = "A fast, stable, pure-Rust implementation of RingCT using Ristretto"

[dependencies]
curve25519-dalek = {version = "3.2.1", features = ["serde"]}
blake2 = "0.10.6"
rand = "0.8.5"
lazy_static = "1.4.0"
serde = "1.0.152"
zeroize = "1"
bulletproofs-plus = { package = "tari_bulletproofs_plus", path = "bulletproofs-plus" }
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.4"

#curve bench isn't useful to the user
#[[bench]]
#name = "curve"
#harness = false

[[bench]]
name = "rangeproof"
harness = false
[[bench]]
name = "signature"
harness = false
[[bench]]
name = "address"
harness = false

[[test]]
name = "rangeproof"
[[test]]
name = "signature"
[[test]]
name = "address"
